# netbox-context-edit

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-and-test.yml
netbox_context_edit/: __init__.py  cli.py  cli_commands.py  context_yaml.py  factory.py  inventory.py  main.py  manager.py
netbox_context_editor/: cli.py  context_yaml.py  main.py
tests/: test_vm.py  util.py
tests/fixtures/vm/: all.json  single.json
